<resources>
    <string name="app_name">MessageMe</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="prompt_username">Email</string>
    <string name="prompt_password">Password</string>
    <string name="login">Login</string>
    <string name="new_user">New User</string>
    <string name="title_activity_sign_up">Sign up</string>
    <string name="prompt_password_again">Confrim Password</string>
    <string name="signup">Sign up</string>
    <string name="name">First and Last Name</string>
    <string name="title_activity_message_me">MessageMe</string>
    <string name="cancel">Cancel</string>
    <string name="refresh">Refresh</string>
    <string name="compose">Compose</string>
    <string name="logout">Logout</string>
    <string name="title_activity_compose">Compose</string>
    <string name="message">Message:</string>
    <string name="send">Send</string>
</resources>
